[metadata]
name = merkle-json
version = 1.0.0
author = Gent Halili
author_email = genthalili@users.noreply.github.com
description = Generates an MD5 unique hash of an Json object 
long_description = file: README.md
long_description_content_type = text/markdown
keywords = hash, unique, json, signature, hash id, id, json, object, merkle, merklejson, merkle-json
url = https://github.com/genthalili/merkle-json
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True